<resources>
    <string name="app_name">NavigationComponentExample</string>
    <string name="this_is_a_box">This is a box</string>
    <string name="go_back">Go back</string>
    <string name="open_secret">Open Secret</string>
    <string name="generate_number">Generate number</string>
    <string name="secret_fragment">Secret Fragment</string>
    <string name="close_the_whole_box">Close the whole box</string>
    <string name="close_secret">Close Secret</string>
    <string name="green_box">Green Box</string>
    <string name="yellow_box">Yellow Box</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
</resources>