<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:gravity="center"
    tools:context=".SecretFragment">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/secret_fragment"
        android:textColor="@color/white" />

    <Button
        android:id = "@+id/close_secret_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/close_secret"
        android:textAllCaps="true"/>

    <Button
        android:id = "@+id/close_whole_box_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/close_the_whole_box"
        android:textAllCaps="true"/>


</LinearLayout>